<resources>

    <!--Strings da tela de login-->
    <string name="app_name">The Guardian</string>
    <string name="welcome_back">Bem-vindo de volta,</string>
    <string name="get_started">Para começarmos, entre usando seu email e senha.</string>
    <string name="email_login">Email</string>
    <string name="senha_login">Senha</string>
    <string name="sem_cadastro"> <font color="#1C2733"> Não tem conta?</font> <font color="#5218FA">cadastre-se</font></string>
    <string name="login">LOGIN</string>
    <string name="login_realizado">Login Realizado</string>
    <string name="Login_negado">Login Negado</string>
    <string name="welcome_back_description">logo</string>
    <string name="esqueci_senha"> <b>Esqueceu a senha?</b></string>
    <string name="logged_in_key">logged_in</string>
    <string name="preference_file_key">loginScreen</string>
    <string name="ver_mapa"><b>ver mapa</b></string>
    <string name="ou">ou</string>
    <string name="informemail">Informe um email</string>

    <!--Strings da telka de cadastro de usuário-->
    <string name="bem_vindo">Bem vindo!</string>
    <string name="para_come_ar_entre_com_suas_credenciais">Para começar entre com suas credenciais.</string>
    <string name="nome_cadastro">Nome</string>
    <string name="cpf_cadastro">CPF</string>
    <string name="data_nascimento">Data de nascimento\n</string>
    <string name="telefone_cadastro">Telefone</string>
    <string name="e_mail_cadastro">E-mail</string>
    <string name="senha_cadastro">Senha</string>
    <string name="cadastrar_se">Cadastre-se</string>
    <string name="j_possu_uma_conta"><font color="#1C2733"> Já possui uma conta? </font> LOGIN \n</string>
    <string name="voltar_login"><b> <font color="#1C2733"> Já possui uma conta? </font> LOGIN</b></string>
    <string name="cadastro_realizado">Cadastro realizado</string>
    <string name="cadastro_negado">Cadastro negado</string>
    />

    <!--- Strings da tela de cadastro de cartão-->
    <string name="cadastracartao">CADASTRAR CARTÃO</string>
    <string name="cartaonumber">Número do cartão</string>
    <string name="cartaoname">Nome no cartão</string>
    <string name="dataexpira">Data de expiração</string>
    <string name="cvv">CVV</string>
    <string name="confirmar">Confirmar</string>
    <string name="numberamostra">0000  0000  0000  0000</string>
    <string name="nameamostra">Nome</string>
    <string name="dataamostra">00/00</string>
    <string name="aviso">Ao realizar uma locação, será <font color="#5218FA">cobrado a caução de uma diária </font>, e
        estornado de acordo com o período utilizado do armário.</string>

    <!---Strings da tela menu-->
    <string name="home">HOME</string>
    <string name="habilita_cartão">Cadastrar cartão</string>
    <string name="descrição">Sair do aplicativo</string>
    <string name="locacoes_pendentes">Locações pendentes</string>

    <!--Strings da tela de opção de aliguel-->
    <string name="aluga_armar">ALUGAR ARMÁRIOS</string>
    <string name="confirmaloc">CONFIRMAR</string>
    <string name="avisoarmario">A opção das 18h é válida, somente a partir das: <font color="#5218FA">7h e 8h da manhã </font>.</string>
    <string name="prox">Escolha uma opção</string>

    <style name="markertitle">ALUGAR</style>

    <style name="voltardescr">voltar</style>

    <string name="time_30_min">30 min</string>
    <string name="time_1h">1h</string>
    <string name="time_2h">2h</string>
    <string name="time_4h">3h</string>
    <string name="time_18h">até às 18h</string>

    <!--Strings da dialog de traçar rota-->
    <string name="rota">TRAÇAR ROTA</string>
    <string name="alugararmario">ALUGAR</string>
    <string name="qrcode">QRCODE</string>
    <string name="apresente_este_c_digo_ao_gerente">Apresente este código ao gerente!</string>
    <string name="qrcode_imagem">qrCode</string>
    <string name="cancelar_loc">Cancelar locação</string>

    <string name="volte">voltar</string>


    <!--GERENTE-->

    <!--Home do gerente e liberar loc-->
    <string name="bem_vindo_gerente">Bem-vindo, %s!</string>
    <string name="libera_loc">LIBERAR LOCAÇÃO</string>
    <string name="abrir_armario">Abrir armário</string>


    <!--NFC write-->
    <string name="libera_locacaonfc">LIBERAR LOCAÇÃO</string>
    <string name="Vincule">VÍNCULE A PULSEIRA NFC</string>
    <string name="pergunta">Quantas pessoas acessarão este armário?</string>
    <string name="OnePerson">1 pessoa</string>
    <string name="TwoPerson">2 pessoas</string>
    <string name="close">Botão de fechar</string>


    <!---camera-->
    <string name="tirarfoto">TIRE UMA FOTO DO(S) USUÁRIO(S)</string>

    <!--Confirma cliente-->
    <string name="confirme">CONFIRME O CLIENTE</string>
    <string name="abrir_armario2">ABRIR ARMÁRIO</string>
    <string name="confirmapessoa">CONFIRMAR</string>


    <!--nfc read-->
    <string name="Aprox">APROXIME A PULSEIRA</string>

    <!--Encerrar Locação-->
    <string name="encerrar">ENCERRAR LOCAÇÃO</string>


    <!--Opção de abrir armário ou encerrar locação-->
    <string name="opcaoescolha">ESCOLHA UMA OPÇÃO</string>
    <string name="encerrarlo">Encerrar Locação</string>
    <string name="content_Description">Photo</string>


    <!--Status de aberto ou encerrado-->
    <string name="locacao_encerrada">LOCAÇÃO ENCERRADA</string>
    <string name="arm_aberto">ARMÁRIO ABERTO</string>
</resources>