<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutCompat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        tools:context=".QrCodeScreen">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rectangle"
            style="@style/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/kronaone_regular"
            android:text="@string/qrcode"
            android:textAlignment="center"
            android:textColor="@color/grey_button"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVoltar"
            style="@style/button_voltar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:drawableStart="@drawable/baseline_arrow_back_ios_new_24"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toStartOf="@id/appCompatTextView2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/apresentation"
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:fontFamily="@font/kronaone_regular"
            android:text="@string/apresente_este_c_digo_ao_gerente"
            android:textAlignment="center"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteY="142dp" />

        <ImageView
            android:id="@+id/qrCode"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/qrcode"
            android:contentDescription="@string/qrcode_imagem"
            android:foregroundGravity="center"
            app:layout_constraintEnd_toEndOf="@id/rectangle"
            app:layout_constraintStart_toStartOf="@id/rectangle"
            app:layout_constraintTop_toBottomOf="@+id/apresentation" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelarloc"
            style="@style/login_button"
            android:layout_width="250dp"
            android:layout_height="49dp"
            android:layout_marginTop="420dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/cancelar_loc"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/qrCode"
            app:layout_constraintStart_toStartOf="@id/qrCode"
            app:layout_constraintTop_toTopOf="@id/qrCode"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>